--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 			<div class="line3"></div>
 		</div>
 
+		<!-- nav list -->
+
+		<ul class="navbar">
+			<li><a href="#home">Home</a></li>
+			<li><a href="#popular">Popular</a></li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#products">Products</a></li>
+		</ul>
+
 		<!-- Logo -->
 		<a href="#" class="logo">
 			Furn <span>.</span>
