--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</a>
 
 		<!-- nav icons -->
-		<div class="nac-icons">
+		<div class="nav-icons">
 			<i class="fa fa-cart-plus" id="cart-icon"></i>
 			<i class="fa fa-user" id="user-icon"></i>
 		</div>
@@ -46,5 +46,7 @@
 
 </header>
 
+
+<script src="assisend/js/index.js"></script>
 </body>
 </html>
