--- a/index.html
+++ b/index.html
@@ -42,6 +42,38 @@
 			<i class="fa fa-cart-plus" id="cart-icon"></i>
 			<i class="fa fa-user" id="user-icon"></i>
 		</div>
+		 
+		 <!-- cart -->
+		 <div class="cart">
+		 	<div class="cart-content">
+		 		<!-- box 1 -->
+		 		<div class="cart-box">
+		 			<img src="">
+		 			<div class="cart-text">
+		 				<h3>Soft Furniture</h3>
+		 				<span>$150</span>
+		 				<span>1x</span>
+		 			</div>
+		 			<i class="fa fa-trash"></i>
+		 		</div>
+
+		 		<!-- box 2 -->
+		 		<div class="cart-box">
+		 			<img src="">
+		 			<div class="cart-text">
+		 				<h3>Soft Furniture</h3>
+		 				<span>$150</span>
+		 				<span>1x</span>
+		 			</div>
+		 			<i class="fa fa-trash"></i>
+		 		</div>
+		 		<div class="total">
+		 			<h3>2 items</h3>
+		 			<span>Total: $300</span>
+		 		</div>
+		 		<a href="#" class="btn">Proceed To Pay</a>
+		 	</div>
+		 </div>
 	</div>
 
 </header>
